# binarizer-service

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Cargo.toml  README.md  mypy.ini  prepare.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: test.yml
public/: index.html
public/js/: client.js
src/: main.py  main.rs  server.py
src/transfrom/: bin.py
