[tool.poetry]
name = "binarizer-service"
version = "0.1.0"
description = ""
authors = ["Michal99Zajac <michal.99.zajac@gmail.com>"]
readme = "README.md"
packages = [{include = "binarizer_service"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''
