[tool.poetry]
name = "binarizer-service"
version = "0.1.0"
description = ""
authors = ["Michal99Zajac <michal.99.zajac@gmail.com>"]
readme = "README.md"
packages = [{include = "binarizer_service"}]

[tool.poetry.dependencies]
python = "^3.10"
aiortc = "^1.5.0"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
numpy = "^1.25.0"
opencv-python = "^4.7.0.72"
av = "^10.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
mypy = "^1.4.0"
autoflake = "^2.1.1"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | dist
)/
'''
